client app fetch riddles from web server '/data' entrypoint.
We changed the way riddles are saved on web server.
Before : static json file
Now : python script build riddles and parse it on json and send it to client app.

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     }
 
     function initGame() {
-        fetch('http://0.0.0.0:5000/static/js/data.json')
+        fetch('http://0.0.0.0:5000/data')
             .then(response => response.json()).then((json) => {
                 json.riddles.forEach((object) => {
                     riddles.push({ instruction: object.instruction, answer: object.answer });
